[0019836] fixing display text color in dark mode

--- a/src/formDirectVideo/formDirectVideo.scss
+++ b/src/formDirectVideo/formDirectVideo.scss
@@ -497,6 +497,7 @@
   font-family: "SF Pro Display";
   font-weight: 500;
   font-size: 14px;
+  color: var(--white_color);
 }
 .btn_upload_pic{
   font-family: "SF Pro Display" !important;
